--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Geist Mono";
-  src: url("/fonts/GeistMonoVF.woff2") format("woff2-variations");
+  src: url("/fonts/GeistMono.woff2") format("woff2-variations");
   font-weight: 100 900;
   font-stretch: 75% 125%;
   font-style: oblique 0deg 12deg;
